# MMPRPC

./: CMakeLists.txt  README.md  autobuild.sh
example/: friend.pb.cc  friend.pb.h  friend.proto  user.pb.cc  user.pb.h  user.proto
example/callee/: friendservice.cc  userservice.cc
example/caller/: callfriendservice.cc  calluserservice.cc
lib/include/: lockqueue.h  logger.h  mprpcapplication.h  mprpcconfig.h  mprpccontroller.h  zookeeperutil.h
src/: lockqueue.cc  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  mprpcprovider.cc  rpcheader.proto  zookeeperutil.cc
src/include/: mprpcchannel.h  mprpcprovider.h
test/protobuf/: a.out  main.cc  test.pb.cc  test.pb.h  test.proto
